# tree-sitter-pascal

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pascal.pc.in
bindings/c/tree_sitter/: tree-sitter-pascal.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pascal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPascalTests/: TreeSitterPascalTests.swift
queries/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: inlinevar.txt
