[package]
name = "tree-sitter-pascal"
description = "Pascal grammar for the tree-sitter parsing library"
version = "0.10.2"
keywords = ["incremental", "parsing", "pascal", "delphi"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Isopod/tree-sitter-pascal"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "queries/highlights.scm",
  "queries/locals.scm",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.24"
